generate models and different test cases

--- a/dbt_core_gcp/dbt_project.yml
+++ b/dbt_core_gcp/dbt_project.yml
@@ -23,6 +23,7 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_packages"
 
 
+
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
@@ -31,6 +32,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   dbt_core_gcp:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    silver:
+      +materialized: table
+    gold:
+      +materialized: table
+
+seeds: 
+  dbt_core_gcp:
+    +schema: testing
+     
